# AIDD-30-Day-Challenge

./: Task1.txt  task1.md  task2.md
.claude/agents/: editing-agent.md  orchestrator-agent.md  research-agent.md  writing-agent.md
.claude/commands/skills/chapter-outline-generator/: SKILL.md
.claude/commands/skills/grammar-and-style-enhancer/: SKILL.md
.claude/commands/skills/plot-consistency-checker/: SKILL.md
task2/: task2.md
task3/: task3.md
task4/: app.py
task7/: task7  task7.md  task71
task8/: main.py  pyproject.toml
task8/calculator/: main.py  operations.py  parser.py
task8/history/prompts/1-cli-calculator/: 0002-cli-calculator-specification.spec.prompt.md  0003-clarified-cli-calculator-specification.spec.prompt.md  0004-cli-calculator-initial-plan.plan.prompt.md  0005-generated-cli-calculator-tasks.tasks.prompt.md
task8/history/prompts/constitution/: 0001-update-project-constitution-with-initial-principles.constitution.prompt.md
task8/specs/1-cli-calculator/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
task8/specs/1-cli-calculator/checklists/: requirements.md
task8/task8.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
task8/tests/: test_cli.py  test_operations.py  test_parser.py
